fix: flee habitat bg, pokedex close button, pause timer while pokedex open
- FleeScene now shows correct habitat background and starts at battle position (left:15%)
- Extract shared habitat CSS to habitats.css (used by Encounter + Flee)
- Pokedex close button separated from card-close to fix overlap with count text
- Walking 5s timer pauses when pokedex is open, restarts on close

--- a/src/scenes/EncounterScene.css
+++ b/src/scenes/EncounterScene.css
@@ -1,4 +1,5 @@
 @import "./sprites.css";
+@import "./habitats.css";
 
 .encounter-scene {
   width: 100%;
@@ -15,27 +16,6 @@
   background-position: center;
 }
 
-.habitat-grassland {
-  background-image: url("../assets/backgrounds/bg_grassland.png");
-}
-.habitat-mountain {
-  background-image: url("../assets/backgrounds/bg_mountain.png");
-}
-.habitat-forest {
-  background-image: url("../assets/backgrounds/bg_forest.png");
-}
-.habitat-urban {
-  background-image: url("../assets/backgrounds/bg_urban.png");
-}
-.habitat-water_edge {
-  background-image: url("../assets/backgrounds/bg_water_edge.png");
-}
-.habitat-sea {
-  background-image: url("../assets/backgrounds/bg_sea.png");
-}
-.habitat-cave {
-  background-image: url("../assets/backgrounds/bg_cave.png");
-}
 
 .encounter-char {
   bottom: 55px;
